nginx-static/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-static-demo
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
  selector:
    app: nginx-static-demo
